# OOP

./: .gitignore  README.md  pyproject.toml  report.html
src/: base_product.py  category.py  lawngrass.py  main.py  mixin.py  product.py
tests/: test_category.py  test_lawngrass.py  test_mixin.py  test_product.py  test_smartphone.py
